--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 thread = "0.1.0"
+[[bin]]
+edition = "2021"
+name = "localnas-run"
+path = "src/main.rs"
